--- a/app/src/main/res/layout/activity_detail_post.xml
+++ b/app/src/main/res/layout/activity_detail_post.xml
@@ -29,7 +29,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:text="title 123 ABC"
-                android:textColor="@android:color/black"
+                android:textColor="@color/primaryText"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
@@ -40,6 +40,7 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/txtTitle"
+                android:textColor="@color/secondaryText"
                 android:layout_marginTop="12dp"
                 android:text="texto ABC" />
 
