--- a/app/src/main/res/layout/activity_time_line.xml
+++ b/app/src/main/res/layout/activity_time_line.xml
@@ -35,12 +35,13 @@
             </android.support.design.widget.CollapsingToolbarLayout>
         </android.support.design.widget.AppBarLayout>
 
-        <android.support.v4.widget.NestedScrollView
+
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swipeRefreshLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             tools:showIn="@layout/activity_time_line">
-
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recycler_view"
@@ -49,8 +50,17 @@
                 android:layout_below="@id/app_bar"
                 android:scrollbars="vertical" />
 
+        </android.support.v4.widget.SwipeRefreshLayout>
 
-        </android.support.v4.widget.NestedScrollView>
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="50sp"
+            android:layout_gravity="center"
+            android:visibility="gone"
+            android:indeterminate="false"
+            android:layout_height="50sp" >
+        </ProgressBar>
+
 
     </android.support.design.widget.CoordinatorLayout>
 
