--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -28,6 +28,7 @@
                 android:textColor="@color/primaryText"
                 android:text="Texto 123 ABC"
                 android:layout_marginLeft="@dimen/default_margin"
+                android:layout_toLeftOf="@+id/img"
                 android:layout_marginTop="@dimen/default_margin"
                 android:layout_marginBottom="@dimen/default_margin" />
 
@@ -43,6 +44,7 @@
                 android:textSize="14sp"
                 android:textColor="@color/secondaryText"
                 android:text="Texto 123 ABC"
+                android:layout_toLeftOf="@+id/img"
                 android:layout_margin="@dimen/default_margin" />
 
 
