--- a/app/src/main/res/layout/activity_detail_post.xml
+++ b/app/src/main/res/layout/activity_detail_post.xml
@@ -28,7 +28,6 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:text="title 123 ABC"
                 android:textColor="@color/primaryText"
                 android:textSize="20sp"
                 android:textStyle="bold" />
@@ -41,11 +40,9 @@
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/txtTitle"
                 android:textColor="@color/secondaryText"
-                android:layout_marginTop="12dp"
-                android:text="texto ABC" />
+                android:layout_marginTop="12dp" />
 
             <TextView
-                android:text="link 123"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/txtSelfText"
